Put shared pages search options into an advanced section (bug #857793)
On Shared Pages, most people will only want to type in a search term.
The new options won't be used often, and clutter up the top of the
page, so they are moved into an 'advanced options' section, hidden by
default on the first page load.

Some additional css is also added here so that the search button
appears alongside the query box, and the options line up in the
advanced section.

--- a/htdocs/theme/raw/static/style/style.css
+++ b/htdocs/theme/raw/static/style/style.css
@@ -2586,8 +2586,29 @@ img.feedicon {
 	line-height: 2em;
 }
 /******* Shared Pages **********/
-#search #search_query_container #search_query {
-	margin-right: 3px;
+form.search input#search_search {
+    margin: 0 0 3px;
+}
+form.search .advanced {
+    margin: .5em 0 0;
+}
+form.search .advanced label {
+    display: block;
+    clear: left;
+    width: 9em;
+    float: left;
+    padding: 3px;
+    margin: 3px 0;
+    font-size: 1em;
+}
+form.search .advanced select {
+    width: 20em;
+}
+form.search .advanced .checkboxes a {
+    display: block;
+    float: left;
+    padding: 3px;
+    margin: 3px 0;
 }
 .sharedpages h3 {
 	margin: 0;
